--- a/hotelex/assets/css/signin.css
+++ b/hotelex/assets/css/signin.css
@@ -244,7 +244,7 @@ h1{
   color: #c21414
 }
 /*botao login*/
-button{
+.submitex{
   background-color: #39371F;
   border-color: #000000;
   color: #FFFFFF;
@@ -258,11 +258,12 @@ button{
   transition: all .4s ease-out;
   width:200%;
   max-width: 1800px;
-  margin: 20;
   height: 50px;
+  width: 20vh;
+  margin-bottom: 20px;
 }
 /*fundo do botex*/
-button:hover{
+.submitex:hover{
   background-color: #000000;
   color: #fff;
 }
