--- a/hotelex/assets/css/pagina_inicial.css
+++ b/hotelex/assets/css/pagina_inicial.css
@@ -187,7 +187,7 @@ h5-1{
   position: absolute;
   color: #000;
   right: 21vh;
-  margin-top:-78vh;
+  margin-top:-79vh;
   margin-right: 4vh;
   display: block; 
   white-space: nowrap;
@@ -229,7 +229,7 @@ h5-1{
   overflow: hidden;
   position: relative;
   top:80vh;
-  right: 180vh;
+  right: 182vh;
 }
 .box3 {
   width: 400px;
@@ -239,7 +239,7 @@ h5-1{
   overflow: hidden;
   position: relative;
   top:160vh;
-  right: 360vh;
+  right: 365vh
 }
 .ofertex{
   background-color: #0A7642;
@@ -460,6 +460,7 @@ h6{
   /* height: 100%; */
   max-height: 260px;
   height: auto;
+  margin-right: 50px;
   display: block;
 }
 a{
@@ -475,17 +476,17 @@ a{
   margin-left: -10vh;
 }
 .custom-size2{
-  width: 44vh; 
+  width: 45vh; 
   height: 34vh; 
   margin-left: -1vh;
 }
 .custom-size3{
-  width: 44vh; 
+  width: 45vh; 
   height: 34vh; 
   margin-left: -1vh;
 }
 .custom-size4{
-  width: 44vh; 
+  width: 45vh; 
   height: 34vh; 
   margin-left: -1vh;
 }
